van algunos graficos...

--- a/TP1/informe/informe.tex
+++ b/TP1/informe/informe.tex
@@ -3,8 +3,8 @@
 \usepackage[spanish]{babel} % para que comandos como \today den el resultado en castellano
 \usepackage{a4wide} % márgenes un poco más anchos que lo usual
 \usepackage[conEntregas]{caratula2}
-%\usepackage{float}
-\usepackage[pdftex]{graphicx}
+\usepackage{float}
+\usepackage{graphicx}
 \usepackage{caption}
 \usepackage{subcaption}
 %Esto de abajo es para encabezado y pie de pagina
@@ -17,15 +17,13 @@
 %\usepackage{algorithm}
 %\usepackage{algpseudocode}
 % Descoración y gráficos
-%\usepackage{fancyhdr}
-%\usepackage{multirow}
-%\usepackage{alltt}
+\usepackage{fancyhdr}
+\usepackage{multirow}
+\usepackage{alltt}
 
 \pagestyle{fancy}
 
 \cfoot{\thepage /\pageref{LastPage} }
-
-
 
 \newcommand\BlockIf[1]{\KwSty{If} \\ #1 \\ \KwSty{End If}}
 \newcommand\BlockElseIf[1]{\KwSty{Else If} \\ #1 \\ \KwSty{End Else If}}
