--- a/TP1/informe/primeraConsigna.tex
+++ b/TP1/informe/primeraConsigna.tex
@@ -37,7 +37,7 @@ durante la escucha. Esto puede observarse en el archivo \emph{tp.py}.\\
 
 %poner como se ejecuta el programa: sudo python tp.py y el tiempo de sniff con el que vamos a entregar: ejemplo 20 minutos (1200 segundos).
 
-Luego de cada escucha son calculadas la cantidad de paquetes de cada host distinguiend si son destino o fuente y el tipo d eoperación realizada.
+Luego de cada escucha son calculadas la cantidad de paquetes de cada host distinguiendo si son destino o fuente y el tipo de operación realizada.
 A partir de estos datos podemos calcular su probabilidad y poder distinguir los nodos de la red en el momento estudiado.\\
 
 Cuánto más dejemos correr el \emph{script} más certero será el modelado de la red, pudiendo determinar qué entidades aparecen 
