--- a/TP1/informe/segundaConsigna.tex
+++ b/TP1/informe/segundaConsigna.tex
@@ -1,1 +1,20 @@
 \section{Segunda consigna: gráficos y análisis}
+
+\subsection{Red con información previa}
+Aquí irá la red tomada de alguna casa, oficina, o algo que sepamos algo...--------------
+
+\subsection{Redes sin información previa}
+A continuación se muestra la cantidad de paquetes ARP por host en escala logarítmica. 
+En el momento de realizar los gráficos, notamos que contabamos con una gran cantidad de hosts con muy baja probabilidad. 
+Para mejorar la claridad y permitir apreciar los resultados a gran escala, decidimos filtrar estos casos y expresarlos como $Otros$ ya que 
+no vimos valor en mostrar nodos con un 0,05 de probabilidad.\\
+
+\subsubsection{Red Wifi: laboratorioDC}
+\input{graf_laboDC}
+
+\newpage
+\subsubsection{Red Wifi: aulasDC}
+\input{graf_aulaDC}
+
+\newpage
+\subsubsection{Red Wifi: A DEFINIR}
