--- a/TP1/informe/graf_aulaDC.tex
+++ b/TP1/informe/graf_aulaDC.tex
@@ -1,31 +1,31 @@
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{./img/probaS_abasto.jpg}
-\caption{Protocolos Distinguidos - Fuente S - Abasto}
+\includegraphics[width=\textwidth]{./img/probaS_aulasDC.jpg}
+\caption{Protocolos Distinguidos - Fuente S - aulasDC}
 \end{figure}
 \newpage
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{./img/proba_src_abasto.jpg}
-\caption{Probabilidad Source - Fuente S1(ARP) - Abasto}
+\includegraphics[width=\textwidth]{./img/proba_src_aulasDC.jpg}
+\caption{Probabilidad Source - Fuente S1(ARP) - aulasDC}
 \end{figure}
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{./img/proba_dst_abasto.jpg}
-\caption{Probabilidad Destination - Fuente S1(ARP) - Abasto}
+\includegraphics[width=\textwidth]{./img/proba_dst_aulasDC.jpg}
+\caption{Probabilidad Destination - Fuente S1(ARP) - aulasDC}
 \end{figure}
 \newpage
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{./img/arp_whoHas_abasto.jpg}
-\caption{Source/Destination paquetes ARP - Operación: Who-Has - Abasto}
+\includegraphics[width=\textwidth]{./img/arp_whoHas_aulasDC.jpg}
+\caption{Source/Destination paquetes ARP - Operación: Who-Has - aulasDC}
 \end{figure}
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{./img/arp_isAt_abasto.jpg}
-\caption{Source/Destination paquetes ARP - Operación: Is-At - Abasto}
+\includegraphics[width=\textwidth]{./img/arp_isAt_aulasDC.jpg}
+\caption{Source/Destination paquetes ARP - Operación: Is-At - aulasDC}
 \end{figure}
