modifico red domestica

--- a/TP1/informe/primeraConsigna.tex
+++ b/TP1/informe/primeraConsigna.tex
@@ -45,7 +45,14 @@ muy seguido y brindan poca información, así como qué ocurrencias son anomalí
 Es esperable que la entropía calculada paso a paso tienda a la entropía de la fuente de información.
 
 \subsection{Capturas sobre distintas LAN}
-%Decir donde hicimos los test... y alguna huevada más de porque corrimos en tales lados...
+Para la ejercitación en este trabajo corrimos los scripts desarrollados. Por un lado, analizamos
+qué ocurre en una red doméstica y por otro lado qué es lo que ocurre en la red wifi del Abasto Shopping y en las redes de la Facultad: 
+LaboratoriosDC y AulasDC.\\
+
+Hemos tomado dos enfoques distintos para encarar estas redes, de acuerdo a la información que conocíamos de antemano de cada una. Para la red 
+doméstca, partimos sabiendo a qué dispositivo se corresponde cada dirección IP y cómo se relacionan los mismos, permitiéndonos ver cómo se reflejaba 
+esto en el traspaso de paquetes. Para las redes del Abasto y de la Facultad, analizamos el flujo de datos desde una posición completamente ajena 
+a la organización de la red; no sabemos qué dispositivo tiene cada IP ni tenemos suposiciones previas al respecto. 
 
 
 
