detalles, falta lo groso

--- a/TP1/informe/segundaConsigna.tex
+++ b/TP1/informe/segundaConsigna.tex
@@ -122,13 +122,16 @@ En el momento de realizar los gráficos, notamos que contabamos con una gran can
 Para mejorar la claridad y permitir apreciar los resultados a gran escala, decidimos filtrar estos casos y expresarlos como $Otros$ ya que 
 no vimos valor en mostrar nodos con un 0,05 de probabilidad.\\
 
-\subsubsection{Red Wifi: laboratorioDC}
+Las tres redes que se detallan a continuación nos hemos conectado por medio Wifi y son redes de espacios públicos sin seguridad. 
+Por tal motivo cualquier dispositivo podría incorporarse a la red en cualquier momento.\\
+
+\subsubsection{Red Wifi: laboratorioDC - FCEN}
 \input{graf_laboDC}
 
 \newpage
-\subsubsection{Red Wifi: aulasDC}
+\subsubsection{Red Wifi: aulasDC - FCEN}
 \input{graf_aulaDC}
 
 \newpage
-\subsubsection{Red Wifi: Abasto}
+\subsubsection{Red Wifi: Abasto Shopping}
 \input{graf_abasto}
