--- a/TP1/informe/graf_abasto.tex
+++ b/TP1/informe/graf_abasto.tex
@@ -1,31 +1,31 @@
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{./img/probaS_abasto.jpg}
+\includegraphics[scale=0.7]{./img/probaS_abasto.jpg}
 \caption{Protocolos Distinguidos - Fuente S - Abasto}
 \end{figure}
 \newpage
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{./img/proba_src_abasto.jpg}
+\includegraphics[scale=0.7]{./img/proba_src_abasto.jpg}
 \caption{Probabilidad Source - Fuente S1(ARP) - Abasto}
 \end{figure}
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{./img/proba_dst_abasto.jpg}
+\includegraphics[scale=0.7]{./img/proba_dst_abasto.jpg}
 \caption{Probabilidad Destination - Fuente S1(ARP) - Abasto}
 \end{figure}
 \newpage
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{./img/arp_whoHas_abasto.jpg}
+\includegraphics[scale=0.7]{./img/arp_whoHas_abasto.jpg}
 \caption{Source/Destination paquetes ARP - Operación: Who-Has - Abasto}
 \end{figure}
 
 \begin{figure}[h!]
 \centering
-\includegraphics[width=\textwidth]{./img/arp_isAt_abasto.jpg}
+\includegraphics[scale=0.7]{./img/arp_isAt_abasto.jpg}
 \caption{Source/Destination paquetes ARP - Operación: Is-At - Abasto}
 \end{figure}
